--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -9,3 +9,19 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
+
+body{
+    background-color: rgb(156, 156, 156);
+}
+
+img{
+   width: auto; 
+   height: 200px;
+   object-fit: cover;
+}
+
+h1{
+    font-size: 50px;
+    
+    
+}
